migrated to new hakuneko module interface outsourced file functionalities to package IO

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "hakuneko": ""
+    "hakuneko": "latest",
+    "logtrine": "latest"
   }
 }
