--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "hakuneko": "latest",
-    "logtrine": "latest"
+    "@hakuneko/srapers": "latest",
+    "@logtrine/logtrine": "latest"
   }
 }
