fixed dependency name

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@hakuneko/srapers": "latest",
+    "@hakuneko/scrapers": "latest",
     "@logtrine/logtrine": "latest"
   }
 }
